Add free shipping text

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 			<div class="small-12">
 				<div id="buyDetailPlate">
 					<h6 class="title">برای خرید کتاب به یکی از فروشگاه‌های زیر در تلگرام پیام دهید و یا با شماره تلفن آنها تماس بگیرید.</h6>
-					<p class="storeTitle">فروشگاه الوکتاب</p>
+					<p class="storeTitle">فروشگاه الوکتاب<br><small>(ارسال رایگان به همه ی نقاط کشور)</small></p>
 					<table class="telegramButtonsPlate">
 						<tr>
 							<td>
