Move translator words to bottom

--- a/index.html
+++ b/index.html
@@ -64,21 +64,6 @@
 				</table>
 			</div>
 		</div>
-		<h4 class="inDetailTitle">پیشگفتار مترجم</h4>
-		<div class="row">
-			<div>
-				<p class="interpreterText">
-				چند ســال پیش که تازه به بازار کار وارد شــده بودم، کوشیدم تا چند کسب و کار راه بیاندازم، ولی پس از چندی هر کدام با شکســت روبرو می‌شدند. در آن سالها میکوشــیدم تا از دیگران بیاموزم که چه كنم تا در کسب و کار پیروز شوم. کمابیش همه یک چیز را می‌گفتند: «طرح تجاری بنویسید»، «یک دفتر کار اجاره کنید»، «ســرمایه‌دار پیدا کنید»، «تا می توانید آگهی بدهید»، «کپی یک محصول خوب را بســازید»، «هر چه مشتری گفت را بپذیرید»، «نباید از رقیبان چیزی کمتر داشــته باشید»، «به کسی روش کســب و کارتان را نگویید»، «تا دیر وقت کار کنید»، «نیروهای تحصیل کرده را به کار گیرید» و بسیاری دیگر از این دست. این کتاب را که میخواندم، دیدم که به همه چیز جور دیگری می‌نگرد.
-				<br/>
-و این نگرش دگرســان نه تنها نویســندگانش را شکســت نداده، بلکه به پیروزى و کامیابى رســانده است. چیزهایی مانند: «برنامه‌ریزی گمانه‌زنی اســت»، «به کمتر از آنچه میاندیشــید نیاز دارید»، «سرمایه‌گذاری از ســوی دیگران را فراموش کنید»، «شنونده بســازید»، «تقلید نکنید»، «بگذارید مشــتریانتان از شــما بیرون بزنند»، «کمتر از هماوردان انجام دهید»، «از سرآشــپزها پیروی کنید»، «نخوابیدن راهکار بدی است»، «بهترینهــا همه جا هســتند» و بســیاری دیگــر. این کتــاب پندهای ســودمندی دارد ولی حتی اگر آنها را نپذیرید، دانستن این که راه دیگری هم برای رسیدن به هدف هست و <span>چشــمها را باید شست، جور دیگر باید دید</span>، به شما در پیروزی در کسب و کارتان کمک خواهد کرد.
-<br/>
-این کتاب را به دوســتان خود شناســاندم ولی دیدم که هیچ کس کتاب انگلیســی نمی خواند. همــه کمابیش از خوانــدن آن می گریزند. تصمیم گرفتم که آن را به فارســی ترجمه كنم تا همه بتوانند آن را بخوانند. شــاید کسانی میخواهند کسب و کاری راه بیندازند و این کتاب بتواند راه پیروزی آنها را هموارتر کند. در ترجمهی این کتاب، دو دوســت گرامی خیلی کمک کردند. «میثم مویینی» که با وســواس فراوان همهی واژههای بــه کار رفته را برگزید و <span>واژه ها را شست</span>. و همچنین «رضا ســلطانپور» که پیشنوشت کتاب را با کتاب انگلیســی مقایســه كرد تا هیچ جملهای نادرست نباشد. همچنین سپاســگزارم از دوســتان دیگری که این کتاب را پیش از چاپ خواندند و دیدگاه های خود را گفتند تا ترجمه ى كتاب بهتر شود. ایــن کتاب را پیش خــود نگه نداریــد. آن را به دیگران نیــز بدهید تا بخوانند.
-				</p>
-				<p class="interpreterName">
-				بهرنگ نوروزی نیا
-				</p>
-			</div>
-		</div>
 		<h4 class="inDetailTitle">آنچه در این کتاب می‌خوانید:</h4>
 		<div id="fullListPlate" class="row">
 			<div class="column medium-4 listBox">
@@ -142,13 +127,13 @@
 				پیشروی
 				</p>
 				<p class="text">
-					<span>محدودیتها را بپذیرید</span>
+					<span>محدودیت‌ها را بپذیرید</span>
 					<br/>
 					<span>نیمی از فراورده را بسازید، نه یک فراورده‌ی نیمه‌کاره را</span>
 					<br/>
 					<span>از ریشهی مشکل آغاز کنید</span>
 					<br/>
-					<span>از ریزهکاریها در آغاز چشمپوشی کنید</span>
+					<span>از ریزه‌کاری‌ها در آغاز چشمپوشی کنید</span>
 					<br/>
 					<span>تصمیم‌گیری پیشرفت است</span>
 					<br/>
@@ -178,7 +163,7 @@
 					<br/>
 					<span>وقفه دشمن باروری است</span>
 					<br/>
-					<span>نشستها زهرناکند</span>
+					<span>نشست‌ها زهرناکند</span>
 					<br/>
 					<span>به نسبت خوب، عالی است</span>
 					<br/>
@@ -192,7 +177,7 @@
 					<br/>
 					<span>فهرست بلندبا  بیسرانجام است</span>
 					<br/>
-					<span>تصمیمهای کوچک بگیرید</span>
+					<span>تصمیم‌های کوچک بگیرید</span>
 				</p>
 				<p class="title">
 				هماوردان
@@ -206,7 +191,7 @@
 					<br/>
 					<span>کمتر از هماوردان انجام دهید</span>
 					<br/>
-					<span>چه کسی اهمیت میدهد که آنها چه کار میکنند؟</span>
+					<span>چه کسی اهمیت میدهد که آن‌ها چه کار میکنند؟</span>
 				</p>
 				<p class="title">
 				فرگشت
@@ -237,13 +222,13 @@
 					<br/>
 					<span>به پشت صحنه بروید</span>
 					<br/>
-					<span>هیچ کس گلهای مصنوعی را دوست ندارد</span>
+					<span>هیچ کس گل‌های مصنوعی را دوست ندارد</span>
 					<br/>
-					<span>گزارشهای روزنامهای هرزنامهاند</span>
+					<span>گزارش‌های روزنام‌های هرزنامه‌اند</span>
 					<br/>
 					<span>روزنامهی وال استریت را فراموش کنید</span>
 					<br/>
-					<span>از مواد فروشها بیاموزید</span>
+					<span>از مواد فروش‌ها بیاموزید</span>
 					<br/>
 					<span>بازاریابی یک واحد از شرکت نیست</span>
 					<br/>
@@ -261,13 +246,13 @@
 					<br/>
 					<span>وقتی به مشکل برخوردید کسی را به کار گیرید</span>
 					<br/>
-					<span>از آدمهای بزرگ بگذرید</span>
+					<span>از آدم‌های بزرگ بگذرید</span>
 					<br/>
-					<span>غریبههایی در یک مهمانی رسمی</span>
+					<span>غریبه‌هایی در یک مهمانی رسمی</span>
 					<br/>
 					<span>کارنامه‌ها خندهدارند</span>
 					<br/>
-					<span>سالهای بی ربط</span>
+					<span>سال‌های بی ربط</span>
 					<br/>
 					<span>آموزش رسمی را فراموش کنید</span>
 					<br/>
@@ -275,9 +260,9 @@
 					<br/>
 					<span>خویش مدیرها را به کار گیرید</span>
 					<br/>
-					<span>نویسندههای خوب را به کار گیرید</span>
+					<span>نویسنده‌های خوب را به کار گیرید</span>
 					<br/>
-					<span>بهترینها همه جا هستند</span>
+					<span>بهترین‌ها همه جا هستند</span>
 					<br/>
 					<span>کارمندان را بیازمایید</span>
 
@@ -307,9 +292,9 @@
 					<br/>
 					<span>از ستاره‌ها بگذرید</span>
 					<br/>
-					<span>آنها بچه نیستند</span>
+					<span>آن‌ها بچه نیستند</span>
 					<br/>
-					<span>آدمها را سر 5 به خانه بفرستید</span>
+					<span>آدم‌ها را سر 5 به خانه بفرستید</span>
 					<br/>
 					<span>با نخستین اشتباه واکنش نشان ندهید</span>
 					<br/>
@@ -344,7 +329,7 @@
 					<p class="author">مارک کوبان، یکی از بنیادگذاران HDNet و صاحب Dallas Mavericks</p>
 
 					<p class="text">
-						 «هیچ ســخن بی‌معنی یا سانسور شــده‌ای وجود ندارد، تنها صدها قانون ســاده‌ی پیروزی و کامیابی گفته شــده است.»
+						 «هیچ ســخن بی‌معنی یا سانسور شــده‌ای وجود ندارد، تنها صد‌ها قانون ســاده‌ی پیروزی و کامیابی گفته شــده است.»
 					</p>
 					<p class="author">
 						کریس اندرسن، نویسنده‌ی کتاب‌های پرفروش The Long Tail و Free به گزینش نیویورک تایمز
@@ -419,11 +404,11 @@
 						 «فرض [این کتاب] این است که یک ســازمان، مانند یک نرم‌افزار است. ویرایش‌پذیر اســت. نرمش‌پذیر است. سهیم شدنی اســت. در برابر خطا ایســتادگی میکند. در حالت آزمایشــی (بتــا)، باز هم کاربردی اســت. بازانجام‌پذیر اســت. نویســندگان به اصل ســادگی همه چیز باور دارند و بازانجام نیز همین گونه است.»
 					</p>
 					<p class="author">
-						جان مدا، نویسندهی قانونهای سادگی
+						جان مدا، نویسندهی قانون‌های سادگی
 					</p>
 
 					<p class="text">
-						«بازانجام مانند نویســندگانش است: چابک، بت‌شکن و الهام‌بخش. تنها برای شــرکتهای تازه راه افتاده نیست. هرکسی که کار می‌کند می‌تواند از آن بیاموزد.»
+						«بازانجام مانند نویســندگانش است: چابک، بت‌شکن و الهام‌بخش. تنها برای شــرکت‌های تازه راه افتاده نیست. هرکسی که کار می‌کند می‌تواند از آن بیاموزد.»
 					</p>
 					<p class="author">
 						جسیکا لوینگستون، شریک Y Combinator و نویسنده Founders at Work
@@ -432,10 +417,25 @@
 				</div>
 			</div>
 		</div>
+		<h4 class="inDetailTitle">پیشگفتار مترجم</h4>
+		<div class="row">
+			<div>
+				<p class="interpreterText">
+				چند ســال پیش که تازه به بازار کار وارد شــده بودم، کوشیدم تا چند کسب و کار راه بیاندازم، ولی پس از چندی هر کدام با شکســت روبرو می‌شدند. در آن سال‌ها میکوشــیدم تا از دیگران بیاموزم که چه كنم تا در کسب و کار پیروز شوم. کمابیش همه یک چیز را می‌گفتند: «طرح تجاری بنویسید»، «یک دفتر کار اجاره کنید»، «ســرمایه‌دار پیدا کنید»، «تا می توانید آگهی بدهید»، «کپی یک محصول خوب را بســازید»، «هر چه مشتری گفت را بپذیرید»، «نباید از رقیبان چیزی کمتر داشــته باشید»، «به کسی روش کســب و کارتان را نگویید»، «تا دیر وقت کار کنید»، «نیروهای تحصیل کرده را به کار گیرید» و بسیاری دیگر از این دست. این کتاب را که میخواندم، دیدم که به همه چیز جور دیگری می‌نگرد.
+				<br/>
+و این نگرش دگرســان نه تنها نویســندگانش را شکســت نداده، بلکه به پیروزى و کامیابى رســانده است. چیزهایی مانند: «برنامه‌ریزی گمانه‌زنی اســت»، «به کمتر از آنچه میاندیشــید نیاز دارید»، «سرمایه‌گذاری از ســوی دیگران را فراموش کنید»، «شنونده بســازید»، «تقلید نکنید»، «بگذارید مشــتریانتان از شــما بیرون بزنند»، «کمتر از هماوردان انجام دهید»، «از سرآشــپزها پیروی کنید»، «نخوابیدن راهکار بدی است»، «بهترینهــا همه جا هســتند» و بســیاری دیگــر. این کتــاب پندهای ســودمندی دارد ولی حتی اگر آن‌ها را نپذیرید، دانستن این که راه دیگری هم برای رسیدن به هدف هست و <span>چشــم‌ها را باید شست، جور دیگر باید دید</span>، به شما در پیروزی در کسب و کارتان کمک خواهد کرد.
+<br/>
+این کتاب را به دوســتان خود شناســاندم ولی دیدم که هیچ کس کتاب انگلیســی نمی خواند. همــه کمابیش از خوانــدن آن می گریزند. تصمیم گرفتم که آن را به فارســی ترجمه كنم تا همه بتوانند آن را بخوانند. شــاید کسانی میخواهند کسب و کاری راه بیندازند و این کتاب بتواند راه پیروزی آن‌ها را هموارتر کند. در ترجمهی این کتاب، دو دوســت گرامی خیلی کمک کردند. «میثم مویینی» که با وســواس فراوان همهی واژه‌های بــه کار رفته را برگزید و <span>واژه‌ها را شست</span>. و همچنین «رضا ســلطانپور» که پیشنوشت کتاب را با کتاب انگلیســی مقایســه كرد تا هیچ جمله‌ای نادرست نباشد. همچنین سپاســگزارم از دوســتان دیگری که این کتاب را پیش از چاپ خواندند و دیدگاه‌های خود را گفتند تا ترجمه ى كتاب بهتر شود. ایــن کتاب را پیش خــود نگه نداریــد. آن را به دیگران نیــز بدهید تا بخوانند.
+				</p>
+				<p class="interpreterName">
+				بهرنگ نوروزی نیا
+				</p>
+			</div>
+		</div>
 		<div id="buy" class="row fullWidth">
 			<div class="small-12">
 				<div id="buyDetailPlate">
-					<h6 class="title">برای خرید کتاب به یکی از فروشگاه‌های زیر در تلگرام پیام دهید و یا با شماره تلفن آنها تماس بگیرید.</h6>
+					<h6 class="title">برای خرید کتاب به یکی از فروشگاه‌های زیر در تلگرام پیام دهید و یا با شماره تلفن آن‌ها تماس بگیرید.</h6>
 					<p class="storeTitle">فروشگاه الوکتاب<br><small>(ارسال رایگان به همه ی نقاط کشور)</small></p>
 					<table class="telegramButtonsPlate">
 						<tr>
