Fix typos and change description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="apple-itunes-app" content="app-id=1068518901">
 		<meta property="og:title" content="بازانجام، از پرفروش ترین کتاب‌های آمریکا و انگلستان" />
 		<meta property="og:site_name" content="بازانجام"/>
-		<meta property="og:description" content="چند ســال پیش که تازه به بازار کار وارد شــده بودم، کوشیدم تا چند کسب و کار راه بیاندازم، ولی پس از چندی هر کدام با شکســت روبرو می‌شدند. در آن سالها میکوشــیدم تا از دیگران بیاموزم که چه كنم تا در کسب و کار پیروز شوم. کمابیش همه یک چیز را می‌گفتند: «طرح تجاری بنویسید»، «یک دفتر کار اجاره کنید»، «ســرمایه‌دار پیدا کنید»، «تا می توانید آگهی بدهید»، «کپی یک محصول خوب را بســازید»، «هر چه مشتری گفت را بپذیرید»، «نباید از رقیبان چیزی کمتر داشــته باشید»، «به کسی روش کســب و کارتان را نگویید»، «تا دیر وقت کار کنید»، «نیروهای تحصیل کرده را به کار گیرید» و بسیاری دیگر از این دست. این کتاب را که میخواندم، دیدم که به همه چیز جور دیگری می‌نگرد. " />
+		<meta property="og:description" content="«اگر بخواهــم برای ســرمایه‌گذاری، میان کســی که بازانجــام را خوانده و کســی که گواهینامــه‌ی مدیریت اجرایی را گرفته یکــی را برگزینم، هر بار روی خواننده‌ی بازانجام ســرمایه‌گذاری خواهم کرد. بایــد این کتاب را بخوانید.» «هیچ ســخن بی‌معنی یا سانسور شــده‌ای وجود ندارد، تنها صد‌ها قانون ســاده‌ی پیروزی و کامیابی گفته شــده است.» «روشن‌بینی و نبوغی که این کتاب دارد چند بار مرا تا مرز اشک ریختن برد. کتاب فوق‌العاده‌ای ست.»" />
 		<meta property="og:image" content="" />
 		<link rel="stylesheet" type="text/css" href="static/css/fonts.css?v=1"
 		/>
@@ -88,7 +88,7 @@
 					<br/>
 					<span>به یادگیری‌ از اشتباه‌ها بیش از اندازه ارزش داده شده است</span>
 					<br/>
-					<span>برنامه‌ریزی گمانهزنی است</span>
+					<span>برنامه‌ریزی گمانه زنی است</span>
 					<br/>
 					<span>چرا بزرگ شوید؟</span>
 					<br/>
@@ -102,11 +102,11 @@
 				<p class="text">
 					<span>جهان را دگرگون کنید</span>
 					<br/>
-					<span>کسنخارد پشت من</span>
+					<span>کس نخارد پشت من</span>
 					<br/>
 					<span>ساختن را آغاز کنید</span>
 					<br/>
-					<span>بهانهی کمبود زمان را نیاورید</span>
+					<span>بهانه‌ی کمبود زمان را نیاورید</span>
 					<br/>
 					<span>باورهایتان را مشخص کنید</span>
 					<br/>
@@ -114,9 +114,9 @@
 					<br/>
 					<span>سرمایه‌گذاری از سوی دیگران را فراموش کنید</span>
 					<br/>
-					<span>به کمتر از آنچه میاندیشید نیاز دارید</span>
+					<span>به کمتر از آنچه می‌اندیشید نیاز دارید</span>
 					<br/>
-					<span>یک کسب و کار راه بیندازید نه یک برآغاز</span>
+					<span>یک کسب و کار راه بیاندازید نه یک برآغاز</span>
 					<br/>
 					<span>خشت اول چون نهد معمار کج</span>
 					<br/>
@@ -131,9 +131,9 @@
 					<br/>
 					<span>نیمی از فراورده را بسازید، نه یک فراورده‌ی نیمه‌کاره را</span>
 					<br/>
-					<span>از ریشهی مشکل آغاز کنید</span>
+					<span>از ریشه‌ی مشکل آغاز کنید</span>
 					<br/>
-					<span>از ریزه‌کاری‌ها در آغاز چشمپوشی کنید</span>
+					<span>از ریزه‌کاری‌ها در آغاز چشم‌پوشی کنید</span>
 					<br/>
 					<span>تصمیم‌گیری پیشرفت است</span>
 					<br/>
@@ -147,7 +147,7 @@
 					<br/>
 					<span>فراورده‌های جانبیتان را بفروشید</span>
 					<br/>
-					<span>اکنون راه بیندازید</span>
+					<span>اکنون راه بیاندازید</span>
 				</p>
 
 			</div>
@@ -169,13 +169,13 @@
 					<br/>
 					<span>بردهای تند و چابک</span>
 					<br/>
-					<span>قهرمانبازی در نیاورید</span>
+					<span>قهرمان بازی در نیاورید</span>
 					<br/>
 					<span>بخوابید</span>
 					<br/>
 					<span>برآوردهایتان خیلی بد است</span>
 					<br/>
-					<span>فهرست بلندبا  بیسرانجام است</span>
+					<span>فهرست بلندبالا بی سرانجام است</span>
 					<br/>
 					<span>تصمیم‌های کوچک بگیرید</span>
 				</p>
@@ -185,7 +185,7 @@
 				<p class="text">
 					<span>تقلید نکنید</span>
 					<br/>
-					<span>فرآوردهتان را متفاوت کنید</span>
+					<span>فرآورده‌تان را متفاوت کنید</span>
 					<br/>
 					<span>به دنبال درد سر بگردید</span>
 					<br/>
@@ -224,15 +224,15 @@
 					<br/>
 					<span>هیچ کس گل‌های مصنوعی را دوست ندارد</span>
 					<br/>
-					<span>گزارش‌های روزنام‌های هرزنامه‌اند</span>
+					<span>گزارش‌های روزنامه‌ای هرزنامه‌اند</span>
 					<br/>
-					<span>روزنامهی وال استریت را فراموش کنید</span>
+					<span>روزنامه‌ی وال استریت را فراموش کنید</span>
 					<br/>
 					<span>از مواد فروش‌ها بیاموزید</span>
 					<br/>
 					<span>بازاریابی یک واحد از شرکت نیست</span>
 					<br/>
-					<span>افسانهی یک شبه ره صد ساله رفتن</span>
+					<span>افسانه‌ی یک شبه ره صد ساله رفتن</span>
 				</p>
 
 			</div>
@@ -250,7 +250,7 @@
 					<br/>
 					<span>غریبه‌هایی در یک مهمانی رسمی</span>
 					<br/>
-					<span>کارنامه‌ها خندهدارند</span>
+					<span>کارنامه‌ها خنده دارند</span>
 					<br/>
 					<span>سال‌های بی ربط</span>
 					<br/>
@@ -363,12 +363,12 @@
 			<div class="column small-12">
 				<div class="quoteBox">
 					<p class="text">
-						«همانند سبک ۳۷ سیگنالز، خردی که در این صفحه‌ها است، تیز و برنده ولی ســاده و سرراست و ثابت شده اســت ... این کتاب را چند بار بخوانید تا به خودتان اشتیاق زمبرایبهراهافتادنوساختنچیزی را بدهید.»
+						«همانند سبک ۳۷ سیگنالز، خردی که در این صفحه‌ها است، تیز و برنده ولی ســاده و سرراست و ثابت شده اســت ... این کتاب را چند بار بخوانید تا به خودتان اشتیاق لازم برای به راه افتادن و ساختن چیزی را بدهید.»
 					</p>
 					<p class="author">تنی شیه، مدیر عامل zappos.com</p>
 
 					<p class="text">
-					«زیرکی بازانجام در این است که شما را مشــتاق می‌کند تا به هرچیزی که درباره‌ى راهبرد، مشتریان و انجام کار میدانید، دوباره بیندیشید.»
+					«زیرکی بازانجام در این است که شما را مشــتاق می‌کند تا به هرچیزی که درباره‌ى راهبرد، مشتریان و انجام کار میدانید، دوباره بیاندیشید.»
 					</p>
 					<p class="author">ویلیام تیلور، نویسنده‌ی Fast Company و یکی از نویسندگان Mavericks at Work/p>
 
@@ -383,14 +383,14 @@
 						«الهام‌بخــش ... در جهانی که همه از ما می‌خواهند با داشــته‌های کمتر، کار بیشتری انجام دهیم، نویسندگان نشان می‌دهند که چگونه کار کمتری انجام دهیم و بیشتر بیافرینیم.»
 					</p>
 					<p class="author">
-						اسکات روزنبرگ، بنیادگذار salon.com و نویسندهی Dreaming in Code and Say Everything
+						اسکات روزنبرگ، بنیادگذار salon.com و نویسنده‌ی Dreaming in Code and Say Everything
 					</p>
 
 					<p class="text">
 						 «خودتان را رها کنید و بگذارید شــناخت و تجربه‌ی ناآشنای ۳۷ سیگنالز به‌ شــما راه کامیابی کســب و کار در سده‌ی بیســت و یکم را نشان دهد. زبانزدهای فروشندگی یا سخن‌های مشاوره‌ای در کار نیست. تنها پندهای کاربردی است که همه میتوانیم به کار بریم.»
 					</p>
 					<p class="author">
-						سال کاپ ن، کارگشای ارشد Business Innovation Factory
+						سال کاپان، کارگشای ارشد Business Innovation Factory
 					</p>
 
 					<p class="text">
@@ -404,7 +404,7 @@
 						 «فرض [این کتاب] این است که یک ســازمان، مانند یک نرم‌افزار است. ویرایش‌پذیر اســت. نرمش‌پذیر است. سهیم شدنی اســت. در برابر خطا ایســتادگی میکند. در حالت آزمایشــی (بتــا)، باز هم کاربردی اســت. بازانجام‌پذیر اســت. نویســندگان به اصل ســادگی همه چیز باور دارند و بازانجام نیز همین گونه است.»
 					</p>
 					<p class="author">
-						جان مدا، نویسندهی قانون‌های سادگی
+						جان مدا، نویسنده‌ی قانون‌های سادگی
 					</p>
 
 					<p class="text">
@@ -425,7 +425,7 @@
 				<br/>
 و این نگرش دگرســان نه تنها نویســندگانش را شکســت نداده، بلکه به پیروزى و کامیابى رســانده است. چیزهایی مانند: «برنامه‌ریزی گمانه‌زنی اســت»، «به کمتر از آنچه میاندیشــید نیاز دارید»، «سرمایه‌گذاری از ســوی دیگران را فراموش کنید»، «شنونده بســازید»، «تقلید نکنید»، «بگذارید مشــتریانتان از شــما بیرون بزنند»، «کمتر از هماوردان انجام دهید»، «از سرآشــپزها پیروی کنید»، «نخوابیدن راهکار بدی است»، «بهترینهــا همه جا هســتند» و بســیاری دیگــر. این کتــاب پندهای ســودمندی دارد ولی حتی اگر آن‌ها را نپذیرید، دانستن این که راه دیگری هم برای رسیدن به هدف هست و <span>چشــم‌ها را باید شست، جور دیگر باید دید</span>، به شما در پیروزی در کسب و کارتان کمک خواهد کرد.
 <br/>
-این کتاب را به دوســتان خود شناســاندم ولی دیدم که هیچ کس کتاب انگلیســی نمی خواند. همــه کمابیش از خوانــدن آن می گریزند. تصمیم گرفتم که آن را به فارســی ترجمه كنم تا همه بتوانند آن را بخوانند. شــاید کسانی میخواهند کسب و کاری راه بیندازند و این کتاب بتواند راه پیروزی آن‌ها را هموارتر کند. در ترجمهی این کتاب، دو دوســت گرامی خیلی کمک کردند. «میثم مویینی» که با وســواس فراوان همهی واژه‌های بــه کار رفته را برگزید و <span>واژه‌ها را شست</span>. و همچنین «رضا ســلطانپور» که پیشنوشت کتاب را با کتاب انگلیســی مقایســه كرد تا هیچ جمله‌ای نادرست نباشد. همچنین سپاســگزارم از دوســتان دیگری که این کتاب را پیش از چاپ خواندند و دیدگاه‌های خود را گفتند تا ترجمه ى كتاب بهتر شود. ایــن کتاب را پیش خــود نگه نداریــد. آن را به دیگران نیــز بدهید تا بخوانند.
+این کتاب را به دوســتان خود شناســاندم ولی دیدم که هیچ کس کتاب انگلیســی نمی خواند. همــه کمابیش از خوانــدن آن می گریزند. تصمیم گرفتم که آن را به فارســی ترجمه كنم تا همه بتوانند آن را بخوانند. شــاید کسانی میخواهند کسب و کاری راه بیاندازند و این کتاب بتواند راه پیروزی آن‌ها را هموارتر کند. در ترجمه‌ی این کتاب، دو دوســت گرامی خیلی کمک کردند. «میثم مویینی» که با وســواس فراوان همه‌ی واژه‌های بــه کار رفته را برگزید و <span>واژه‌ها را شست</span>. و همچنین «رضا ســلطانپور» که پیشنوشت کتاب را با کتاب انگلیســی مقایســه كرد تا هیچ جمله‌ای نادرست نباشد. همچنین سپاســگزارم از دوســتان دیگری که این کتاب را پیش از چاپ خواندند و دیدگاه‌های خود را گفتند تا ترجمه ى كتاب بهتر شود. ایــن کتاب را پیش خــود نگه نداریــد. آن را به دیگران نیــز بدهید تا بخوانند.
 				</p>
 				<p class="interpreterName">
 				بهرنگ نوروزی نیا
