Add og image and google verification

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<meta property="og:title" content="بازانجام، از پرفروش ترین کتاب‌های آمریکا و انگلستان" />
 		<meta property="og:site_name" content="بازانجام"/>
 		<meta property="og:description" content="«اگر بخواهــم برای ســرمایه‌گذاری، میان کســی که بازانجــام را خوانده و کســی که گواهینامــه‌ی مدیریت اجرایی را گرفته یکــی را برگزینم، هر بار روی خواننده‌ی بازانجام ســرمایه‌گذاری خواهم کرد. بایــد این کتاب را بخوانید.» «هیچ ســخن بی‌معنی یا سانسور شــده‌ای وجود ندارد، تنها صد‌ها قانون ســاده‌ی پیروزی و کامیابی گفته شــده است.» «روشن‌بینی و نبوغی که این کتاب دارد چند بار مرا تا مرز اشک ریختن برد. کتاب فوق‌العاده‌ای ست.»" />
-		<meta property="og:image" content="" />
+		<meta property="og:image" content="static/image/front.jpg" />
+		<meta name="google-site-verification" content="RmyPhhbg5O-8iglTuoR6dHdWAHJ8HQc-31ovXn4b0FA" />
 		<link rel="stylesheet" type="text/css" href="static/css/fonts.css?v=1"
 		/>
 		<link rel="stylesheet" type="text/css" href="static/css/normalize.css?v=1" />
