darkhast typos fixed.buy and reviews plate margin added

--- a/index.html
+++ b/index.html
@@ -315,7 +315,9 @@
 
 			</div>
 		</div>
-		<h4 id="reviews" class="inDetailTitle">دیدگاه‌های اشخاص خاص در مورد بازانجام</h4>
+		<div id="reviews" class="freeSpace">
+		</div>
+		<h4  class="inDetailTitle">دیدگاه‌های اشخاص خاص در مورد بازانجام</h4>
 		<div class="row">
 			<div class="column small-12">
 				<div class="quoteBox">
@@ -433,7 +435,9 @@
 				</p>
 			</div>
 		</div>
-		<div id="buy" class="row fullWidth">
+		<div id="buy" class="freeSpace">
+		</div>
+		<div  class="row fullWidth">
 			<div class="small-12">
 				<div id="buyDetailPlate">
 					<h6 class="title">برای خرید کتاب به یکی از فروشگاه‌های زیر در تلگرام پیام دهید و یا با شماره تلفن آن‌ها تماس بگیرید.</h6>
@@ -454,7 +458,7 @@
 						</tr>
 					</table>
 					<p class="subtitle">
-					راهنمای خرید: پس از ارتباط با یکی از مراکز فروش و اعلام درخوست، یک قبض باهمتا برای شما پیامک خواهد شد و پس از پرداخت، سفارش شما ارسال خواهد شد.
+					راهنمای خرید: پس از ارتباط با یکی از مراکز فروش و اعلام درخواست، یک قبض باهمتا برای شما پیامک خواهد شد و پس از پرداخت، سفارش شما ارسال خواهد شد.
 					</p>
 					<p class="linkPlate">
 					<a href="https://bahamta.com/help/payment"  target="_blank">راهنمای پرداخت قبض های باهمتا</a>
