change aloo ketab to erka book.add erka book website

--- a/index.html
+++ b/index.html
@@ -441,14 +441,18 @@
 			<div class="small-12">
 				<div id="buyDetailPlate">
 					<h6 class="title">برای خرید کتاب به یکی از فروشگاه‌های زیر در تلگرام پیام دهید و یا با شماره تلفن آن‌ها تماس بگیرید.</h6>
-					<p class="storeTitle">فروشگاه الوکتاب<br><small>(ارسال رایگان به همه ی نقاط کشور)</small></p>
+					<p class="storeTitle">فروشگاه ارکا بوک<br><small>(ارسال رایگان به همه ی نقاط کشور)</small></p>
 					<table class="telegramButtonsPlate">
 						<tr>
 							<td>
 								<p>ثبت سفارش در تلگرام</p>
-								<a href="http://telegram.me/TakaBook" target="_blank">تلگرام الوکتاب</a>
+								<a href="http://telegram.me/TakaBook" target="_blank">تلگرام ارکا بوک</a>
 								<br/>
 								<a href="http://telegram.me/TakaBook" target="_blank">۰۹۲۱ ۲۸۹۵۶۱۸</a>
+							</td>
+							<td>
+								<p>ثبت سفارش در وب‌سایت</p>
+								<a href="http://www.erkabook.com/product/%D8%A8%D8%A7%D8%B2-%D8%A7%D9%86%D8%AC%D8%A7%D9%85/" target="_blank">www.erkabook.com</a>
 							</td>
 							<td>
 								<p>ثبت سفارش تلفنی</p>
