--- a/index.html
+++ b/index.html
@@ -440,15 +440,12 @@
 		<div  class="row fullWidth">
 			<div class="small-12">
 				<div id="buyDetailPlate">
-					<h6 class="title">برای خرید کتاب به یکی از فروشگاه‌های زیر در تلگرام پیام دهید و یا با شماره تلفن آن‌ها تماس بگیرید.</h6>
-					<p class="storeTitle">فروشگاه ارکا بوک<br><small>(ارسال رایگان به همه ی نقاط کشور)</small></p>
+					<p class="storeTitle">فروشگاه ارکا بوک</p>
 					<table class="telegramButtonsPlate">
 						<tr>
 							<td>
 								<p>ثبت سفارش در تلگرام</p>
-								<a href="https://telegram.me/erkaadmin" target="_blank">تلگرام ارکا بوک</a>
-								<br/>
-								<a href="https://telegram.me/erkaadmin" target="_blank">۰۹۲۱ ۲۸۹۵۶۱۸</a>
+								<a href="https://telegram.me/erkaadmin" target="_blank">@erkaadmin</a>
 							</td>
 							<td>
 								<p>ثبت سفارش در وب‌سایت</p>
@@ -461,30 +458,13 @@
 
 						</tr>
 					</table>
-					<p class="subtitle">
-					راهنمای خرید: پس از ارتباط با یکی از مراکز فروش و اعلام درخواست، یک قبض باهمتا برای شما پیامک خواهد شد و پس از پرداخت، سفارش شما ارسال خواهد شد.
-					</p>
-					<p class="linkPlate">
-					<a href="https://bahamta.com/help/payment"  target="_blank">راهنمای پرداخت قبض های باهمتا</a>
-					</p>
 					<table id="brandsPlate">
 						<tr>
-							<td>
-								<a href="http://metacamp.ir/" target="_blank">
-								<img src="static/image/metacamp.png">
-								</a>
-							</td>
 							<td>
 								<a href="https://bahamta.com" target="_blank">
 								<img src="static/image/svg/logo.svg">
 								</a>
 							</td>
-							<td>
-								<a href="http://www.adanic.ir/" target="_blank">
-								<img src="static/image/adanic.png">
-								</a>
-							</td>
-
 						</tr>
 					</table>
 				</div>
