--- a/index.html
+++ b/index.html
@@ -440,22 +440,12 @@
 		<div  class="row fullWidth">
 			<div class="small-12">
 				<div id="buyDetailPlate">
-					<p class="storeTitle">فروشگاه ارکا بوک</p>
-					<table class="telegramButtonsPlate">
-						<tr>
+		<p class="storeTitle">خرید از دیجیکالا</p>
+				<table class="telegramButtonsPlate">
+					<tr>
 							<td>
-								<p>ثبت سفارش در تلگرام</p>
-								<a href="https://telegram.me/erkaadmin" target="_blank">@erkaadmin</a>
+									<a href="https://www.digikala.com/product/dkp-399573" target="_blank">https://www.digikala.com/product/dkp-399573</a>
 							</td>
-							<td>
-								<p>ثبت سفارش در وب‌سایت</p>
-								<a href="http://www.erkabook.ir/shop/book/%d8%a8%d8%a7%d8%b2%d8%a7%d9%86%d8%ac%d8%a7%d9%85/" target="_blank">www.erkabook.ir</a>
-							</td>
-							<td>
-								<p>ثبت سفارش تلفنی</p>
-								<a href="tel:+982166176718">۰۲۱ ۶۶۱۷ ۶۷۱۸</a>
-							</td>
-
 						</tr>
 					</table>
 					<p>&nbsp;</p>
